Add page elements and sections

--- a/index.html
+++ b/index.html
@@ -2,10 +2,117 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="author" content="Stone Crafter's & Home">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Stone Crafter's & Home</title>
+    <meta name="description" content="">
+    <!-- Open Graph Metadata -->
+    <meta property="og:locale" content="en_US">
+    <meta property="og:site_name" content="Stone Crafter's & Home">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="">
+    <meta property="og:title" content="Stone Crafter's & Home">
+    <meta property="og:description" content="">
+    <meta property="og:url" content="https://developer.apple.com/">
+    <!-- Stylesheet -->
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    
+    <nav class="header">
+        <div class="logo">
+            <a href="#">Header Logo</a>
+        </div>
+        <div class="links">
+            <ul>
+                <li><a href="kitchen.html">Kitchen</a></li>
+                <li><a href="bath.html">Bath</a></li>
+                <li><a href="countertops.html">Countertops</a></li>
+                <li><a href="flooring.html">Flooring</a></li>
+            </ul>
+        </div>
+    </nav>
+    <main>
+        <div class="container">
+            <div class="hero">
+                <div class="hero-text">
+                    <h1>Stone Crafter's & Home</h1>
+                </div>
+            </div>
+            <div class="products">
+                <h2>Our Products</h2>
+                <div class="card-container">
+                    <div class="card">
+                        Kitchen
+                    </div>
+                    <div class="card">
+                        Bath
+                    </div>
+                    <div class="card">
+                        Countertops
+                    </div>
+                    <div class="card">
+                        Flooring
+                    </div>
+                </div>
+            </div>
+            <div class="gallery">
+                <h2>Gallery</h2>
+            </div>
+            <div class="testimonials">
+                <h2>Testimonials</h2>
+                <div class="testimonial-container">
+                    <div class="testimonial">
+                        <img class="testimonial-img" src="https://placehold.co/80x80" alt="placeholder">
+                        <h3>John Doe</h3>
+                        <p>"Wow! What a great product!"</p>
+                    </div>
+                    <div class="testimonial">
+                        <img class="testimonial-img" src="https://placehold.co/80x80" alt="placeholder">
+                        <h3>John Doe</h3>
+                        <p>"Wow! What a great product!"</p>
+                    </div>
+                    <div class="testimonial">
+                        <img class="testimonial-img" src="https://placehold.co/80x80" alt="placeholder">
+                        <h3>John Doe</h3>
+                        <p>"Wow! What a great product!"</p>
+                    </div>
+                </div>
+            </div>
+            <div class="contact">
+                <h2>Contact Us</h2>
+                <div class="contact-container">
+                    <div class="map">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3159.5838279515237!2d-121.00225112367437!3d37.63547612017127!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80905391fb1371e5%3A0xc2f2d2623d2088ac!2s1231%20N%207th%20St%2C%20Modesto%2C%20CA%2095354!5e0!3m2!1sen!2sus!4v1695284938529!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    </div>
+                    <div class="information">
+                        <div class="telephone">
+                            (209) 810-2222
+                        </div>
+                        <div class="estimate">
+                            Request an estimate
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
+    <div class="footer">
+        <div class="links">
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="">About Us</a></li>
+                <li><a href="kitchen.html">Kitchen</a></li>
+                <li><a href="bath.html">Bath</a></li>
+                <li><a href="countertops.html">Countertops</a></li>
+                <li><a href="flooring.html">Flooring</a></li>
+            </ul>
+        </div>
+        <div class="logo">
+            Footer Logo
+        </div>
+        <div class="copyright">
+            Copyright © Stone Crafter's & Home. All Rights Reserved.
+        </div>
+    </div>
 </body>
 </html>
