Add additional sections and content for sections

--- a/index.html
+++ b/index.html
@@ -41,26 +41,36 @@
             <div class="products">
                 <h2>Our Products</h2>
                 <div class="card-container">
-                    <div class="card">
+                    <a class="card kitchen" href="kitchen.html">
                         Kitchen
-                    </div>
-                    <div class="card">
+                    </a>
+                    <a class="card bath" href="bath.html">
                         Bath
-                    </div>
-                    <div class="card">
+                    </a>
+                    <a class="card countertops" href="countertops.html">
                         Countertops
-                    </div>
-                    <div class="card">
+                    </a>
+                    <a class="card flooring" href="flooring.html">
                         Flooring
-                    </div>
+                    </a>
                 </div>
             </div>
             <div class="gallery">
                 <h2>Gallery</h2>
+                <div class="photos">
+                    <img class="gallery-img" src="../img/gallery/2.jpg" alt="placeholder">
+                    <img class="gallery-img" src="../img/gallery/3.jpg" alt="placeholder">
+                    <img class="gallery-img" src="../img/gallery/5.jpg" alt="placeholder">
+                    <img class="gallery-img" src="../img/gallery/8.jpg" alt="placeholder">
+                </div>
             </div>
             <div class="testimonials">
                 <h2>Testimonials</h2>
                 <div class="testimonial-container">
+                    <span class="yelp-review" data-review-id="PE7H-UOEOSpA5K6dhSmTiQ" data-hostname="www.yelp.com">Read <a href="https://www.yelp.com/user_details?userid=MUTEa-0FySw6teiRDRB8Sw" rel="nofollow noopener">Ivanna G.</a>'s <a href="https://www.yelp.com/biz/stone-crafters-modesto?hrid=PE7H-UOEOSpA5K6dhSmTiQ" rel="nofollow noopener">review</a> of <a href="https://www.yelp.com/biz/zf7dSUp8YgZ70gxQJS-IYw" rel="nofollow noopener">Stone Crafters</a> on <a href="https://www.yelp.com" rel="nofollow noopener">Yelp</a><script src="https://www.yelp.com/embed/widgets.js" type="text/javascript" async></script></span>
+                    <span class="yelp-review" data-review-id="Q54Qr-ViL4-dpZgyo-XJ4Q" data-hostname="www.yelp.com">Read <a href="https://www.yelp.com/user_details?userid=7rdz8WEXC-O52nEHLvgpJA" rel="nofollow noopener">Rachel K.</a>'s <a href="https://www.yelp.com/biz/stone-crafters-modesto?hrid=Q54Qr-ViL4-dpZgyo-XJ4Q" rel="nofollow noopener">review</a> of <a href="https://www.yelp.com/biz/zf7dSUp8YgZ70gxQJS-IYw" rel="nofollow noopener">Stone Crafters</a> on <a href="https://www.yelp.com" rel="nofollow noopener">Yelp</a><script src="https://www.yelp.com/embed/widgets.js" type="text/javascript" async></script></span>
+                    <span class="yelp-review" data-review-id="P-ZNT_Uv-FjB93Yh7pmwaQ" data-hostname="www.yelp.com">Read <a href="https://www.yelp.com/user_details?userid=dhdPhV6MA17oFVoj7zGj_g" rel="nofollow noopener">Leslie P.</a>'s <a href="https://www.yelp.com/biz/stone-crafters-modesto?hrid=P-ZNT_Uv-FjB93Yh7pmwaQ" rel="nofollow noopener">review</a> of <a href="https://www.yelp.com/biz/zf7dSUp8YgZ70gxQJS-IYw" rel="nofollow noopener">Stone Crafters</a> on <a href="https://www.yelp.com" rel="nofollow noopener">Yelp</a><script src="https://www.yelp.com/embed/widgets.js" type="text/javascript" async></script></span>
+                <!--
                     <div class="testimonial">
                         <img class="testimonial-img" src="https://placehold.co/80x80" alt="placeholder">
                         <h3>John Doe</h3>
@@ -76,6 +86,7 @@
                         <h3>John Doe</h3>
                         <p>"Wow! What a great product!"</p>
                     </div>
+                -->
                 </div>
             </div>
             <div class="contact">
@@ -84,10 +95,14 @@
                     <div class="map">
                         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3159.5838279515237!2d-121.00225112367437!3d37.63547612017127!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80905391fb1371e5%3A0xc2f2d2623d2088ac!2s1231%20N%207th%20St%2C%20Modesto%2C%20CA%2095354!5e0!3m2!1sen!2sus!4v1695284938529!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
-                    <div class="information">
+                    <div class="info">
+                        <img class="info-img" src="https://placehold.co/80x80" alt="placeholder">
                         <div class="telephone">
                             (209) 810-2222
                         </div>
+                    </div>
+                    <div class="info">
+                        <img class="info-img" src="https://placehold.co/80x80" alt="placeholder">
                         <div class="estimate">
                             Request an estimate
                         </div>
