--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta property="og:description" content="">
     <meta property="og:url" content="https://developer.apple.com/">
     <!-- Stylesheet -->
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <nav class="header">
@@ -58,10 +58,10 @@
             <div class="gallery">
                 <h2>Gallery</h2>
                 <div class="photos">
-                    <img class="gallery-img" src="../img/gallery/2.jpg" alt="placeholder">
-                    <img class="gallery-img" src="../img/gallery/3.jpg" alt="placeholder">
-                    <img class="gallery-img" src="../img/gallery/5.jpg" alt="placeholder">
-                    <img class="gallery-img" src="../img/gallery/8.jpg" alt="placeholder">
+                    <img class="gallery-img" src="img/gallery/2.jpg" alt="placeholder">
+                    <img class="gallery-img" src="img/gallery/3.jpg" alt="placeholder">
+                    <img class="gallery-img" src="img/gallery/5.jpg" alt="placeholder">
+                    <img class="gallery-img" src="img/gallery/8.jpg" alt="placeholder">
                 </div>
             </div>
             <div class="testimonials">
