Add logo to page

--- a/index.html
+++ b/index.html
@@ -15,13 +15,15 @@
     <meta property="og:description" content="">
     <meta property="og:url" content="https://developer.apple.com/">
     <!-- Stylesheet -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/index-style.css">
 </head>
 <body>
     <nav class="header">
-        <div class="logo">
-            <a href="#">Header Logo</a>
-        </div>
+       <div class="logo-container">
+            <a class="logo" href="/">
+                <img class="logo-img" src="img/logo.png" alt="Stone Crafter's and Home">
+            </a>
+       </div>
         <div class="links">
             <ul>
                 <li><a href="kitchen.html">Kitchen</a></li>
@@ -96,15 +98,19 @@
                         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3159.5838279515237!2d-121.00225112367437!3d37.63547612017127!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80905391fb1371e5%3A0xc2f2d2623d2088ac!2s1231%20N%207th%20St%2C%20Modesto%2C%20CA%2095354!5e0!3m2!1sen!2sus!4v1695284938529!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
                     <div class="info">
-                        <img class="info-img" src="https://placehold.co/80x80" alt="placeholder">
+                        <a class="info-img-card" href="tel:+12098102222">
+                            <img class="info-img" src="img/telephone-fill.svg" alt="Call us">
+                        </a>
                         <div class="telephone">
-                            (209) 810-2222
+                            <a href="tel:+12098102222">(209) 810-2222</a>
                         </div>
                     </div>
                     <div class="info">
-                        <img class="info-img" src="https://placehold.co/80x80" alt="placeholder">
+                        <a class="info-img-card" href="mailto:">
+                            <img class="info-img" src="img/envelope-fill.svg" alt="Request an estimate">
+                        </a>
                         <div class="estimate">
-                            Request an estimate
+                            <a href="mailto:">Request an estimate</a>
                         </div>
                     </div>
                 </div>
@@ -114,16 +120,18 @@
     <div class="footer">
         <div class="links">
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="">About Us</a></li>
+                <li><a href="/">Home</a></li>
+                <li><a href="about.html">About Us</a></li>
                 <li><a href="kitchen.html">Kitchen</a></li>
                 <li><a href="bath.html">Bath</a></li>
                 <li><a href="countertops.html">Countertops</a></li>
                 <li><a href="flooring.html">Flooring</a></li>
             </ul>
         </div>
-        <div class="logo">
-            Footer Logo
+        <div class="logo-container">
+            <a class="logo" href="/">
+                <img class="logo-img" src="img/logo.png" alt="Stone Crafter's and Home">
+            </a>
         </div>
         <div class="copyright">
             Copyright © Stone Crafter's & Home. All Rights Reserved.
