Add a image border to index.html and adjust spacing for headers in index-style.css

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
             <div class="hero">
                 <div class="hero-text">
                     <h1>Stone Crafter's & Home</h1>
+                    <p>Designing your dream home</p>
                 </div>
             </div>
             <div class="products">
@@ -56,6 +57,9 @@
                         Flooring
                     </a>
                 </div>
+            </div>
+            <div class="border">
+                
             </div>
             <div class="gallery">
                 <h2>Gallery</h2>
