Change logo links from '/' to '#' to correct where they lead

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
     <nav class="header">
        <div class="logo-container">
-            <a class="logo" href="/">
+            <a class="logo" href="#">
                 <img class="logo-img" src="img/logo.png" alt="Stone Crafter's and Home">
             </a>
        </div>
@@ -59,7 +59,7 @@
                 </div>
             </div>
             <div class="border">
-                
+
             </div>
             <div class="gallery">
                 <h2>Gallery</h2>
@@ -133,7 +133,7 @@
             </ul>
         </div>
         <div class="logo-container">
-            <a class="logo" href="/">
+            <a class="logo" href="#">
                 <img class="logo-img" src="img/logo.png" alt="Stone Crafter's and Home">
             </a>
         </div>
