Remove old html from html files, add new html structure to html files, remove unused css styles, add new css styling, add javascript files

--- a/index.html
+++ b/index.html
@@ -2,144 +2,119 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="author" content="Stone Crafter's & Home">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Stone Crafter's & Home</title>
+    <title>Stone Crafter's International</title>
     <meta name="description" content="">
     <!-- Open Graph Metadata -->
     <meta property="og:locale" content="en_US">
     <meta property="og:site_name" content="Stone Crafter's & Home">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="">
+    <meta property="og:image" content="https://raw.githubusercontent.com/Pradheon/stonecrafters-international-llc/main/img/logo.png">
     <meta property="og:title" content="Stone Crafter's & Home">
-    <meta property="og:description" content="">
-    <meta property="og:url" content="https://developer.apple.com/">
-    <!-- Stylesheet -->
-    <link rel="stylesheet" href="css/index-style.css">
+    <meta property="og:description" content="Design your dream home.">
+    <meta property="og:url" content="https://26fcbadf.stonecrafters-international-llc.pages.dev/">
+    <!-- Twitter Metadata -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:image" content="https://raw.githubusercontent.com/Pradheon/stonecrafters-international-llc/main/img/logo.png">
+    <meta name="twitter:description" content="Design your dream home.">
+    <meta name="twitter:title" content="Stone Crafter's International">
+    <meta name="twitter:url" content="https://26fcbadf.stonecrafters-international-llc.pages.dev/">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito">
 </head>
 <body>
-    <nav class="header">
-       <div class="logo-container">
-            <a class="logo" href="#">
-                <img class="logo-img" src="img/logo.png" alt="Stone Crafter's and Home">
+    <nav class="global-nav stickied">
+        <div class="container">
+            <a class="nav-logo">
+                <!--<img src="./img/logo.png" alt="Stone Crafter's & Home">-->
+                <span>Stone Crafter's International</span>
             </a>
-       </div>
-        <div class="links">
-            <ul>
-                <li><a href="kitchen.html">Kitchen</a></li>
-                <li><a href="bath.html">Bath</a></li>
-                <li><a href="countertops.html">Countertops</a></li>
-                <li><a href="flooring.html">Flooring</a></li>
-            </ul>
+            <div class="menu-wrapper">
+                <ul id="nav-items" class="nav-links">
+                    <li class="active"><a href="index.html">Home</a></li>
+                    <li><a href="kitchen.html">Kitchen</a></li>
+                    <li><a href="#">Bath</a></li>
+                    <li><a href="#">Countertops</a></li>
+                    <li><a href="#">Flooring</a></li>
+                    <li><a href="#">About Us</a></li>
+                </ul>
+            </div>
         </div>
     </nav>
-    <main>
-        <div class="container">
-            <div class="hero">
-                <div class="hero-text">
-                    <h1>Stone Crafter's & Home</h1>
-                    <p>Designing your dream home</p>
+    <main class="main root-body">
+        <!-- Hero -->
+        <div class="section-wrapper">
+            <section id="section-heros">
+                <div class="heros">
+                    <div class="hero-item hero">
+                        <img class="poster" src="./img/unsplash/kenny-eliason-mGZX2MOPR-s-unsplash.jpg" alt="A living room">
+                    </div>
                 </div>
-            </div>
-            <div class="products">
-                <h2>Our Products</h2>
-                <div class="card-container">
-                    <a class="card kitchen" href="kitchen.html">
-                        Kitchen
-                    </a>
-                    <a class="card bath" href="bath.html">
-                        Bath
-                    </a>
-                    <a class="card countertops" href="countertops.html">
-                        Countertops
-                    </a>
-                    <a class="card flooring" href="flooring.html">
-                        Flooring
-                    </a>
-                </div>
-            </div>
-            <div class="border">
+            </section>
+        </div>
+        <!-- Products -->
+        <div class="products">
+
+        </div>
+        <!-- Background Divider -->
+        <div class="block">
+
+        </div>
+        <!-- Testimonials -->
+        <div class="testimonials">
+            <div class="container">
 
             </div>
-            <div class="gallery">
-                <h2>Gallery</h2>
-                <div class="photos">
-                    <img class="gallery-img" src="img/gallery/2.jpg" alt="placeholder">
-                    <img class="gallery-img" src="img/gallery/3.jpg" alt="placeholder">
-                    <img class="gallery-img" src="img/gallery/5.jpg" alt="placeholder">
-                    <img class="gallery-img" src="img/gallery/8.jpg" alt="placeholder">
-                </div>
-            </div>
-            <div class="testimonials">
-                <h2>Testimonials</h2>
-                <div class="testimonial-container">
-                    <span class="yelp-review" data-review-id="PE7H-UOEOSpA5K6dhSmTiQ" data-hostname="www.yelp.com">Read <a href="https://www.yelp.com/user_details?userid=MUTEa-0FySw6teiRDRB8Sw" rel="nofollow noopener">Ivanna G.</a>'s <a href="https://www.yelp.com/biz/stone-crafters-modesto?hrid=PE7H-UOEOSpA5K6dhSmTiQ" rel="nofollow noopener">review</a> of <a href="https://www.yelp.com/biz/zf7dSUp8YgZ70gxQJS-IYw" rel="nofollow noopener">Stone Crafters</a> on <a href="https://www.yelp.com" rel="nofollow noopener">Yelp</a><script src="https://www.yelp.com/embed/widgets.js" type="text/javascript" async></script></span>
-                    <span class="yelp-review" data-review-id="Q54Qr-ViL4-dpZgyo-XJ4Q" data-hostname="www.yelp.com">Read <a href="https://www.yelp.com/user_details?userid=7rdz8WEXC-O52nEHLvgpJA" rel="nofollow noopener">Rachel K.</a>'s <a href="https://www.yelp.com/biz/stone-crafters-modesto?hrid=Q54Qr-ViL4-dpZgyo-XJ4Q" rel="nofollow noopener">review</a> of <a href="https://www.yelp.com/biz/zf7dSUp8YgZ70gxQJS-IYw" rel="nofollow noopener">Stone Crafters</a> on <a href="https://www.yelp.com" rel="nofollow noopener">Yelp</a><script src="https://www.yelp.com/embed/widgets.js" type="text/javascript" async></script></span>
-                    <span class="yelp-review" data-review-id="P-ZNT_Uv-FjB93Yh7pmwaQ" data-hostname="www.yelp.com">Read <a href="https://www.yelp.com/user_details?userid=dhdPhV6MA17oFVoj7zGj_g" rel="nofollow noopener">Leslie P.</a>'s <a href="https://www.yelp.com/biz/stone-crafters-modesto?hrid=P-ZNT_Uv-FjB93Yh7pmwaQ" rel="nofollow noopener">review</a> of <a href="https://www.yelp.com/biz/zf7dSUp8YgZ70gxQJS-IYw" rel="nofollow noopener">Stone Crafters</a> on <a href="https://www.yelp.com" rel="nofollow noopener">Yelp</a><script src="https://www.yelp.com/embed/widgets.js" type="text/javascript" async></script></span>
-                <!--
-                    <div class="testimonial">
-                        <img class="testimonial-img" src="https://placehold.co/80x80" alt="placeholder">
-                        <h3>John Doe</h3>
-                        <p>"Wow! What a great product!"</p>
-                    </div>
-                    <div class="testimonial">
-                        <img class="testimonial-img" src="https://placehold.co/80x80" alt="placeholder">
-                        <h3>John Doe</h3>
-                        <p>"Wow! What a great product!"</p>
-                    </div>
-                    <div class="testimonial">
-                        <img class="testimonial-img" src="https://placehold.co/80x80" alt="placeholder">
-                        <h3>John Doe</h3>
-                        <p>"Wow! What a great product!"</p>
-                    </div>
-                -->
-                </div>
-            </div>
-            <div class="contact">
-                <h2>Contact Us</h2>
-                <div class="contact-container">
-                    <div class="map">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3159.5838279515237!2d-121.00225112367437!3d37.63547612017127!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80905391fb1371e5%3A0xc2f2d2623d2088ac!2s1231%20N%207th%20St%2C%20Modesto%2C%20CA%2095354!5e0!3m2!1sen!2sus!4v1695284938529!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                    </div>
-                    <div class="info">
-                        <a class="info-img-card" href="tel:+12098102222">
-                            <img class="info-img" src="img/telephone-fill.svg" alt="Call us">
-                        </a>
-                        <div class="telephone">
-                            <a href="tel:+12098102222">(209) 810-2222</a>
+        </div>
+        <!-- Call to Action and Contact -->
+        <div class="contact">
+
+        </div>
+        <!-- Footer -->
+        <div id="footer">
+            <footer class="footer">
+                <div class="main-footer-content">
+                    <div class="margin-wrapper-tb-10 link-wrapper-lr-10n">
+                        <div class="container links">
+                            <a href="#">Home</a>
+                            <a href="#">Kitchen</a>
+                            <a href="#">Bath</a>
+                            <a href="#">Countertops</a>
+                            <a href="#">Flooring</a>
+                            <a href="#">About Us</a>
                         </div>
                     </div>
-                    <div class="info">
-                        <a class="info-img-card" href="mailto:">
-                            <img class="info-img" src="img/envelope-fill.svg" alt="Request an estimate">
+                    <div class="margin-wrapper-tb-10">
+                        <a>
+                            <!-- <img src="" alt=""> -->
                         </a>
-                        <div class="estimate">
-                            <a href="mailto:">Request an estimate</a>
-                        </div>
                     </div>
+                    <div class="margin-wrapper-tb-10 copyright">Copyright © Stone Crafter's International, LLC. All Rights Reserved.</div>
                 </div>
-            </div>
+                <div class="aside">
+                    <div class="color-scheme-toggle" role="radiogroup" tabindex="0" aria-label="Selec a color scheme preference">
+                        <label id="light">
+                            <input type="radio" name="bg-color" value="light" autocomplete="off" onchange="setPreferredColorScheme()" checked>
+                            <div class="text">Light</div>
+                        </label>
+                        <label id="dark">
+                            <input type="radio" name="bg-color" value="dark" autocomplete="off" onchange="setPreferredColorScheme()">
+                            <div class="text">Dark</div>
+                        </label>
+                        <!--
+                        <label id="auto">
+                            <input type="radio" name="bg-color" value="auto" autocomplete="off" onchange="setPreferredColorScheme()">
+                            <div class="text">Auto</div>
+                        </label>
+                        -->
+                    </div>
+                    <script async src="js/color-scheme-toggle.js"></script>
+                </div>
+            </footer>
         </div>
     </main>
-    <div class="footer">
-        <div class="links">
-            <ul>
-                <li><a href="/">Home</a></li>
-                <li><a href="about.html">About Us</a></li>
-                <li><a href="kitchen.html">Kitchen</a></li>
-                <li><a href="bath.html">Bath</a></li>
-                <li><a href="countertops.html">Countertops</a></li>
-                <li><a href="flooring.html">Flooring</a></li>
-            </ul>
-        </div>
-        <div class="logo-container">
-            <a class="logo" href="#">
-                <img class="logo-img" src="img/logo.png" alt="Stone Crafter's and Home">
-            </a>
-        </div>
-        <div class="copyright">
-            Copyright © Stone Crafter's & Home. All Rights Reserved.
-        </div>
-    </div>
+    <!-- JavaScript -->
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+    <script src="js/javascript.js"></script>
 </body>
 </html>
