Add testimonials using Yelp's embed feature

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
     <meta name="twitter:title" content="Stone Crafter's International">
     <meta name="twitter:url" content="https://26fcbadf.stonecrafters-international-llc.pages.dev/">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,400;0,700;0,900;1,300&display=swap" rel="stylesheet">
 </head>
 <body>
     <nav class="global-nav stickied">
@@ -62,9 +64,14 @@
         </div>
         <!-- Testimonials -->
         <div class="testimonials">
+            <h1>Testimonials</h1>
             <div class="container">
-
+                <span class="yelp-review" onchange="setPreferredColorScheme()" data-review-id="OUOSGlnvrvf3bBgEwtaJmQ" data-hostname="www.yelp.com">Read <a href="https://www.yelp.com/user_details?userid=n1pACOovRCrtX7aO_Z37Uw" rel="nofollow noopener">Nicole M.</a>'s <a href="https://www.yelp.com/biz/stone-crafters-modesto?hrid=OUOSGlnvrvf3bBgEwtaJmQ" rel="nofollow noopener">review</a> of <a href="https://www.yelp.com/biz/zf7dSUp8YgZ70gxQJS-IYw" rel="nofollow noopener">Stone Crafters</a> on <a href="https://www.yelp.com" rel="nofollow noopener">Yelp</a><script src="https://www.yelp.com/embed/widgets.js" type="text/javascript" async></script></span>
+                <span class="yelp-review" data-review-id="PE7H-UOEOSpA5K6dhSmTiQ" data-hostname="www.yelp.com">Read <a href="https://www.yelp.com/user_details?userid=MUTEa-0FySw6teiRDRB8Sw" rel="nofollow noopener">Ivanna G.</a>'s <a href="https://www.yelp.com/biz/stone-crafters-modesto?hrid=PE7H-UOEOSpA5K6dhSmTiQ" rel="nofollow noopener">review</a> of <a href="https://www.yelp.com/biz/zf7dSUp8YgZ70gxQJS-IYw" rel="nofollow noopener">Stone Crafters</a> on <a href="https://www.yelp.com" rel="nofollow noopener">Yelp</a><script src="https://www.yelp.com/embed/widgets.js" type="text/javascript" async></script></span>
+                <span class="yelp-review" data-review-id="Q54Qr-ViL4-dpZgyo-XJ4Q" data-hostname="www.yelp.com">Read <a href="https://www.yelp.com/user_details?userid=7rdz8WEXC-O52nEHLvgpJA" rel="nofollow noopener">Rachel K.</a>'s <a href="https://www.yelp.com/biz/stone-crafters-modesto?hrid=Q54Qr-ViL4-dpZgyo-XJ4Q" rel="nofollow noopener">review</a> of <a href="https://www.yelp.com/biz/zf7dSUp8YgZ70gxQJS-IYw" rel="nofollow noopener">Stone Crafters</a> on <a href="https://www.yelp.com" rel="nofollow noopener">Yelp</a><script src="https://www.yelp.com/embed/widgets.js" type="text/javascript" async></script></span>
+                <span class="yelp-review" data-review-id="P-ZNT_Uv-FjB93Yh7pmwaQ" data-hostname="www.yelp.com">Read <a href="https://www.yelp.com/user_details?userid=dhdPhV6MA17oFVoj7zGj_g" rel="nofollow noopener">Leslie P.</a>'s <a href="https://www.yelp.com/biz/stone-crafters-modesto?hrid=P-ZNT_Uv-FjB93Yh7pmwaQ" rel="nofollow noopener">review</a> of <a href="https://www.yelp.com/biz/zf7dSUp8YgZ70gxQJS-IYw" rel="nofollow noopener">Stone Crafters</a> on <a href="https://www.yelp.com" rel="nofollow noopener">Yelp</a><script src="https://www.yelp.com/embed/widgets.js" type="text/javascript" async></script></span>
             </div>
+            <script async src="js/color-scheme-toggle.js"></script>
         </div>
         <!-- Call to Action and Contact -->
         <div class="contact">
