Add cards for products section along with outline

--- a/index.html
+++ b/index.html
@@ -56,12 +56,15 @@
         </div>
         <!-- Products -->
         <div class="products">
-
+            <div class="container">
+                <div class="card"></div>
+                <div class="card"></div>
+                <div class="card"></div>
+                <div class="card"></div>
+            </div>
         </div>
         <!-- Background Divider -->
-        <div class="block">
-
-        </div>
+        <div class="block"></div>
         <!-- Testimonials -->
         <div class="testimonials">
             <h1>Testimonials</h1>
