--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stone Crafter's International</title>
-    <meta name="description" content="">
+    <meta name="description" content="Design your dream home, from kitchens, bathrooms, countertops, and flooring, with the team at Stone Crafter's International.">
     <!-- Open Graph Metadata -->
     <meta property="og:locale" content="en_US">
-    <meta property="og:site_name" content="Stone Crafter's & Home">
+    <meta property="og:site_name" content="Stone Crafter's International">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://raw.githubusercontent.com/Pradheon/stonecrafters-international-llc/main/img/logo.png">
-    <meta property="og:title" content="Stone Crafter's & Home">
-    <meta property="og:description" content="Design your dream home.">
+    <meta property="og:title" content="Stone Crafter's International">
+    <meta property="og:description" content="Design your dream home, from kitchens, bathrooms, countertops, and flooring, with the team at Stone Crafter's International.">
     <meta property="og:url" content="https://26fcbadf.stonecrafters-international-llc.pages.dev/">
     <!-- Twitter Metadata -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:image" content="https://raw.githubusercontent.com/Pradheon/stonecrafters-international-llc/main/img/logo.png">
-    <meta name="twitter:description" content="Design your dream home.">
+    <meta name="twitter:description" content="Design your dream home, from kitchens, bathrooms, countertops, and flooring, with the team at Stone Crafter's International.">
     <meta name="twitter:title" content="Stone Crafter's International">
     <meta name="twitter:url" content="https://26fcbadf.stonecrafters-international-llc.pages.dev/">
     <link rel="stylesheet" href="css/style.css">
@@ -28,7 +28,7 @@
     <nav class="global-nav stickied">
         <div class="container">
             <a class="nav-logo">
-                <!--<img src="./img/logo.png" alt="Stone Crafter's & Home">-->
+                <!--<img src="./img/logo.png" alt="Stone Crafter's International">-->
                 <span>Stone Crafter's International</span>
             </a>
             <div class="menu-wrapper">
