Add webp version of banner images

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <section id="section-heros">
                 <div class="heros">
                     <div class="hero-item hero">
-                        <img class="poster" src="./img/unsplash/kenny-eliason-mGZX2MOPR-s-unsplash.jpg" alt="A living room">
+                        <img class="poster" src="./img/unsplash/kenny-eliason-mGZX2MOPR-s-unsplash.webp" alt="A living room">
                     </div>
                 </div>
             </section>
