--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,400;0,700;0,900;1,300&display=swap" rel="stylesheet">
 </head>
 <body>
-    <nav class="global-nav stickied">
+    <nav class="global-nav">
         <div class="container">
             <a class="nav-logo">
                 <!--<img src="./img/logo.png" alt="Stone Crafter's International">-->
@@ -49,6 +49,11 @@
             <section id="section-heros">
                 <div class="heros">
                     <div class="hero-item hero">
+                        <div class="hero-content">
+                            <h1>Stone Crafter's International</h1>
+                            <p>Design your dream home.</p>
+                            <a href="">Request a quote</a>
+                        </div>
                         <img class="poster" src="./img/unsplash/kenny-eliason-mGZX2MOPR-s-unsplash.webp" alt="A living room">
                     </div>
                 </div>
