Add images and text to cards in the prodcuts section

--- a/index.html
+++ b/index.html
@@ -61,11 +61,12 @@
         </div>
         <!-- Products -->
         <div class="products">
+            <h1>Our Products</h1>
             <div class="container">
-                <div class="card"></div>
-                <div class="card"></div>
-                <div class="card"></div>
-                <div class="card"></div>
+                <div class="card kitchen-card">Kitchen</div>
+                <div class="card bath-card">Bath</div>
+                <div class="card countertops-card">Countertops</div>
+                <div class="card flooring-card">Flooring</div>
             </div>
         </div>
         <!-- Background Divider -->
