Add animations for product cards

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Stone Crafter's International</title>
+    <title>Stone Crafter's International - Home</title>
     <meta name="description" content="Design your dream home, from kitchens, bathrooms, countertops, and flooring, with the team at Stone Crafter's International.">
     <!-- Open Graph Metadata -->
     <meta property="og:locale" content="en_US">
@@ -23,22 +23,22 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,400;0,700;0,900;1,300&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
 </head>
 <body>
     <nav class="global-nav">
         <div class="container">
             <a class="nav-logo">
-                <!--<img src="./img/logo.png" alt="Stone Crafter's International">-->
-                <span>Stone Crafter's International</span>
+                <img src="./img/logo-new-light.png" alt="Stone Crafter's International">
             </a>
             <div class="menu-wrapper">
                 <ul id="nav-items" class="nav-links">
                     <li class="active"><a href="index.html">Home</a></li>
                     <li><a href="kitchen.html">Kitchen</a></li>
-                    <li><a href="#">Bath</a></li>
-                    <li><a href="#">Countertops</a></li>
-                    <li><a href="#">Flooring</a></li>
-                    <li><a href="#">About Us</a></li>
+                    <li><a href="bath.html">Bath</a></li>
+                    <li><a href="countertops.html">Countertops</a></li>
+                    <li><a href="flooring.html">Flooring</a></li>
+                    <li><a href="about.html">About Us</a></li>
                 </ul>
             </div>
         </div>
@@ -50,9 +50,10 @@
                 <div class="heros">
                     <div class="hero-item hero">
                         <div class="hero-content">
+                            <!--<img src="./img/logo-new-light.png" alt="Stone Crafter's International">-->
                             <h1>Stone Crafter's International</h1>
                             <p>Design your dream home.</p>
-                            <a href="">Request a quote</a>
+                            <a href="mailto:scorderdesk@yahoo.com?subject=Request a quote">Request a quote</a>
                         </div>
                         <img class="poster" src="./img/unsplash/kenny-eliason-mGZX2MOPR-s-unsplash.webp" alt="A living room">
                     </div>
@@ -63,10 +64,18 @@
         <div class="products">
             <h1>Our Products</h1>
             <div class="container">
-                <div class="card kitchen-card">Kitchen</div>
-                <div class="card bath-card">Bath</div>
-                <div class="card countertops-card">Countertops</div>
-                <div class="card flooring-card">Flooring</div>
+                <div class="card kitchen-card">
+                    <div class="card-content">Kitchen</div>
+                </div>
+                <div class="card bath-card">
+                    <div class="card-content">Bath</div>
+                </div>
+                <div class="card countertops-card">
+                    <div class="card-content">Countertops</div>
+                </div>
+                <div class="card flooring-card">
+                    <div class="card-content">Flooring</div>
+                </div>
             </div>
         </div>
         <!-- Background Divider -->
@@ -92,7 +101,7 @@
                 <div class="main-footer-content">
                     <div class="margin-wrapper-tb-10 link-wrapper-lr-10n">
                         <div class="container links">
-                            <a href="#">Home</a>
+                            <a href="index.html">Home</a>
                             <a href="#">Kitchen</a>
                             <a href="#">Bath</a>
                             <a href="#">Countertops</a>
@@ -101,8 +110,8 @@
                         </div>
                     </div>
                     <div class="margin-wrapper-tb-10">
-                        <a>
-                            <!-- <img src="" alt=""> -->
+                        <a href="index.html">
+                            <img class="footer-logo" src="./img/logo-new-light.png" alt="Stone Crafter's International">
                         </a>
                     </div>
                     <div class="margin-wrapper-tb-10 copyright">Copyright © Stone Crafter's International, LLC. All Rights Reserved.</div>
